# hate-speech-detection

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: config.yaml  sample.yaml
data/: README.md  sample.csv
docs/: MODEL_CARD.md
docs/decisions/: 0001-char-and-word-ngrams.md  0002-soft-voting-ensemble.md
scripts/: prepare_davidson.py
src/hsd/: __init__.py  api.py  config.py  data.py  evaluate.py  models.py  predict.py  preprocess.py  train.py
tests/: test_pipeline.py  test_preprocess.py
